@@ -1,5 +1,11 @@
 2004-07-14  Jerry Quinn  <jlquinn@optonline.net>
 
+	* java/awt/image/LookupTable.java: New file.
+	* Makefile.am: Added new file.
+	* Makefile.in: Regenerated.
+
+2004-07-14  Jerry Quinn  <jlquinn@optonline.net>
+
 	* java/awt/image/Kernel.java: New file.
 	* Makefile.am: Added new file.
 	* Makefile.in: Regenerated.
